--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,15 @@
   "dependencies": {
     "@daveyplate/better-auth-ui": "^3.1.5",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.12.0",
     "better-auth": "^1.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "inngest": "^3.40.2",
     "lucide-react": "^0.542.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
